--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 urls:
   downloads:
     notebooks: "https://github.com/chrisvdweth/selene/tree/master/notebooks"
-    data: "https://chrisvdw.net/notebooks/test/"
-    models: ""
+    datasets: "https://chrisvdw.net/projects/selene/downloads/datasets/"
+    models: "https://chrisvdw.net/projects/selene/downloads/models/"
     
